11/02/2025
Making Improvements on patient_screen.dart, popup_menu.dart, patient_provider in order to post
in order to post and fetch data to my Backend API(express,nodejs,posgresql) to mi patient table
in my app_herbal database 