@@ -1,10 +1,11 @@
 import 'package:flutter/material.dart';
 import 'package:app_herbal_flutter/src/models/patient_model.dart';
 import 'package:app_herbal_flutter/dio/dio_get.dart';
-
+import 'package:app_herbal_flutter/dio/dio_update.dart';
 class PatientProvider extends ChangeNotifier {
   final TextEditingController searchController = TextEditingController();
   final DioGet dioGet = DioGet();
+  final DioUpdate dioUpdate = DioUpdate(); // Add update instance
 
   final List<Patient> _patients = [
     Patient(id: 'id_patient', name: 'name', phone: 'phone', birthDate:'birth_date' ),
@@ -28,8 +29,16 @@ class PatientProvider extends ChangeNotifier {
       _filteredPatients = fetchedPatients.map((json) => Patient.fromJson(json)).toList();
     }
 
+      // Method to update a patient
+
+
     notifyListeners();
   }
+    void forceNotify() {
+    notifyListeners();
+  }
+
+
 }
 
 class SelectedPatientProvider extends ChangeNotifier {
@@ -42,5 +51,20 @@ class SelectedPatientProvider extends ChangeNotifier {
     notifyListeners();
   }
 
+}
 
+class PatientUpdateProvider extends ChangeNotifier {
+  final DioUpdate dioUpdate = DioUpdate();
+
+  Future<bool> updatePatient(Patient patient, String newName, String newPhone, String newBirthDate) async {
+    bool success = await dioUpdate.updatePatient(patient.id, newName, newPhone, newBirthDate);
+    if (success) {
+      patient.name = newName;
+      patient.phone = newPhone;
+      patient.birthDate = newBirthDate;
+      notifyListeners();
+    }
+    return success;
+  }
+  
 }
